--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,18 @@
 
 .fighters-grid {
   display: flex;
+  flex-wrap: wrap;
   background-color: #ccc;
   border: 1px solid #858585;
   border-radius: 5px;
-  min-width: 45%;
-  min-height: 500px;
+  width: min-content;
+  min-width: 840px;
+  height: min-content;
 }
 
 .fighter {
-  height: 100px;
-  width: 100px;
+  height: 210px;
+  width: 200px;
   background-color: red;
   transition: 0.3s;
   background-size: cover;
