--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   height: 210px;
   width: 200px;
   background-color: red;
-  transition: 0.3s;
+  transition: transform 0.3s;
   background-size: cover;
   border: 5px solid transparent;
   background-repeat: no-repeat;
@@ -36,7 +36,35 @@
 .fighter-screen {
   background-color: #fff;
   border: 1px solid blue;
-  width: 50%;
+  width: 100%;
+  height: 100vh;
   position: fixed;
   bottom: 0;
+}
+
+.name-bg {
+  font-size: 65em;
+  position: absolute;
+  top: -20%;
+  left: 0%;
+  z-index: -2;
+  text-transform: uppercase;
+  font-family: 'Bebas Neue', cursive;
+  color: slategray;
+
+}
+
+.name-fg {
+  font-size: 25em;
+  position: absolute;
+  left: 7%;
+  font-family: 'Bebas Neue', cursive;
+
+}
+
+.char-portrait {
+  position: absolute;
+  right: -10%;
+  top: -10%;
+
 }
