--- a/src/App.css
+++ b/src/App.css
@@ -66,5 +66,13 @@
   position: absolute;
   right: -10%;
   top: -10%;
+  z-index: -1;
 
+}
+
+.side-nav {
+  position: fixed;
+  right: 0 ;
+  top: 0;
+  z-index: 1;
 }
